manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stash
spec:
  selector:
    matchLabels:
      app: stash
  template:
    metadata:
      labels:
        app: stash
    spec:
      containers:
        - name: stash
          image: stashapp/stash:0.22.1
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: stash-data
            mountPath: /data/
          resources:
            requests:
              memory: 128Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 500m
      volumes:
        - name: stash-data
          persistentVolumeClaim:
            claimName: stash
