manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stash
  namespace: stash
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
      app: stash
